# ift_global

./: .github-ci.yml  .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  documentation_improvement.yml  feature_request.yml
.github/issue_templates/: bug_report.md  documentation_improvement.md  feature_request.md
.github/workflows/: build.yml  codeql.yml  documentation.yml  linting.yml  publish.yml  tag-deploy.yml  test.yml  vulnerability-scan.yml
docs/source/: conf.py  ift_global.connectors.rst  ift_global.email.css_stylesheets.rst  ift_global.email.rst  ift_global.file_ops.rst  ift_global.rst  ift_global.utils.rst  index.rst  modules.rst
docs/source/_static/css/: custom.css
docs/source/dev/: documentation.rst  index.rst  reportissues.rst
docs/source/guides/: credentials_manager.rst  index.rst  minio_read_write.rst  read_yaml_use.rst
docs/source/reference/: email_functionality.rst  index.rst  main_namespace.rst
docs/source/userinfo/: index.rst
ift_global/: __init__.py
ift_global/business_date/: calendar_exclusions.py
ift_global/connectors/: file_serialiser.py  filesystem_registry.py  minio_boto.py  minio_fileops.py
ift_global/credentials/: email_cr.py  minio_cr.py
ift_global/email/: __init__.py  email_client.py  html_tools.py
ift_global/email/css_stylesheets/: __init__.py  footer.py  stylesheet_one.py  stylesheet_three.py  stylesheet_two.py
ift_global/tests/: test_calendar_exclusions.py  test_cryptography.py  test_email_cr.py  test_file_serialiser.py  test_file_system_repo.py  test_htmltools.py  test_logger.py  test_minio_cr.py  test_minio_to_boto.py  test_read_yaml.py  test_set_env_var.py  test_string_utils.py
ift_global/utils/: encryption.py  file_operations.py  logger.py  read_yaml.py  set_env_var.py  string_utils.py
